[gd_scene load_steps=14 format=3 uid="uid://de3rlyhm5uqv0"]

[ext_resource type="Script" path="res://UI/Scripts/MethLab/MethLabGame.gd" id="1_lun7o"]

[ext_resource type="FontFile" uid="uid://bgx8gu7aobui5" path="res://assets/Fonts/pixel_font.ttf" id="3_fcsm0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyxm5"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rq2g"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.254902, 0.254902, 0.254902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqdyl"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.254902, 0.254902, 0.254902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tpugy"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.223529, 0.223529, 0.223529, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hpd2h"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.254902, 0.254902, 0.254902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dkxs5"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.254902, 0.254902, 0.254902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wnrcj"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.345098, 0.431373, 0.458824, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43p4i"]
bg_color = Color(0.286275, 0.286275, 0.286275, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.223529, 0.223529, 0.223529, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_35brn"]
bg_color = Color(0.027451, 0.027451, 0.027451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.286275, 0.286275, 0.286275, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qsduc"]
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.223529, 0.223529, 0.223529, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxlav"]
bg_color = Color(0.54902, 0.54902, 0.54902, 0.188235)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.223529, 0.223529, 0.223529, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nvmyb"]
bg_color = Color(0.027451, 0.027451, 0.027451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.223529, 0.223529, 0.223529, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="MethLabGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lun7o")

[node name="BGPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uyxm5")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -279.0
offset_top = 16.0
offset_right = 279.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.670588, 0.831373, 0.87451, 1)
theme_override_colors/font_outline_color = Color(0, 0.611765, 0.827451, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 28
text = "CLANDESTINE CHEMISTRY LAB"
horizontal_alignment = 1

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MethodSelection" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2

[node name="MethodLabel" type="Label" parent="MainContainer/LeftPanel/MethodSelection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_font_sizes/font_size = 18
text = "SYNTHESIS METHOD"
horizontal_alignment = 1

[node name="MethodContainer" type="HBoxContainer" parent="MainContainer/LeftPanel/MethodSelection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="P2PButton" type="Button" parent="MainContainer/LeftPanel/MethodSelection"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_7rq2g")
theme_override_styles/hover = SubResource("StyleBoxFlat_dqdyl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tpugy")
text = "P2P METHOD"

[node name="NagaiButton" type="Button" parent="MainContainer/LeftPanel/MethodSelection"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_7rq2g")
theme_override_styles/hover = SubResource("StyleBoxFlat_hpd2h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dkxs5")
text = "RED PHOSPHORUS METHOD"

[node name="BirchButton" type="Button" parent="MainContainer/LeftPanel/MethodSelection"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_7rq2g")
theme_override_styles/hover = SubResource("StyleBoxFlat_dqdyl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dkxs5")
text = "BIRCH REDUCTION"

[node name="HSeparator" type="HSeparator" parent="MainContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ChemicalListLabel" type="Label" parent="MainContainer/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_font_sizes/font_size = 18
text = "CURRENT CONTENTS"
horizontal_alignment = 1

[node name="ChemicalList" type="Label" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.862745, 0.862745, 0.862745, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_wnrcj")
text = "No chemicals added."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="MainContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ChemicalsLabel" type="Label" parent="MainContainer/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_font_sizes/font_size = 18
text = "AVAILABLE CHEMICALS"
horizontal_alignment = 1

[node name="ChemicalsContainer" type="GridContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="MethylamineButton" type="Button" parent="MainContainer/LeftPanel/ChemicalsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_43p4i")
text = "Methylamine"

[node name="PhenylaceticAcidButton" type="Button" parent="MainContainer/LeftPanel/ChemicalsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_43p4i")
text = "Phenylacetic Acid"

[node name="PseudoephedrineButton" type="Button" parent="MainContainer/LeftPanel/ChemicalsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_43p4i")
text = "Pseudoephedrine"

[node name="RedPhosphorusButton" type="Button" parent="MainContainer/LeftPanel/ChemicalsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_43p4i")
text = "Red Phosphorus"

[node name="IodineButton" type="Button" parent="MainContainer/LeftPanel/ChemicalsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_43p4i")
text = "Iodine"

[node name="LithiumButton" type="Button" parent="MainContainer/LeftPanel/ChemicalsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_43p4i")
text = "Lithium"

[node name="SodiumButton" type="Button" parent="MainContainer/LeftPanel/ChemicalsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_43p4i")
text = "Sodium"

[node name="AluminumButton" type="Button" parent="MainContainer/LeftPanel/ChemicalsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_43p4i")
text = "Aluminum"

[node name="ThoriumNitrateButton" type="Button" parent="MainContainer/LeftPanel/ChemicalsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_43p4i")
text = "Thorium Nitrate"

[node name="HydriodicAcidButton" type="Button" parent="MainContainer/LeftPanel/ChemicalsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_43p4i")
text = "Hydriodic Acid"

[node name="AnhydrousAmmoniaButton" type="Button" parent="MainContainer/LeftPanel/ChemicalsContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_43p4i")
text = "Anhydrous Ammonia"

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeatControl" type="VBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 2

[node name="HeatLabel" type="Label" parent="MainContainer/RightPanel/HeatControl"]
layout_mode = 2
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_font_sizes/font_size = 18
text = "TEMPERATURE CONTROL"
horizontal_alignment = 1

[node name="HeatSlider" type="HSlider" parent="MainContainer/RightPanel/HeatControl"]
layout_mode = 2
focus_mode = 0
min_value = 50.0
max_value = 250.0
value = 100.0
rounded = true

[node name="HeatValue" type="Label" parent="MainContainer/RightPanel/HeatControl"]
layout_mode = 2
theme_override_colors/font_color = Color(0.862745, 0.862745, 0.862745, 1)
theme_override_font_sizes/font_size = 16
text = "100°C"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BeakerLabel" type="Label" parent="MainContainer/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_font_sizes/font_size = 18
text = "REACTION VESSEL"
horizontal_alignment = 1

[node name="MixingBeaker" type="Panel" parent="MainContainer/RightPanel"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_35brn")

[node name="PurityLabel" type="Label" parent="MainContainer/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.862745, 0.862745, 0.862745, 1)
theme_override_font_sizes/font_size = 18
text = "Purity: --"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MainContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ActionButtons" type="HBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MixButton" type="Button" parent="MainContainer/RightPanel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_qsduc")
text = "COMBINE"

[node name="CookButton" type="Button" parent="MainContainer/RightPanel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_qsduc")
text = "SYNTHESIZE"

[node name="ClearButton" type="Button" parent="MainContainer/RightPanel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_qsduc")
text = "CLEAR"

[node name="ConsolePanel" type="VBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConsoleLabel" type="Label" parent="MainContainer/RightPanel/ConsolePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_font_sizes/font_size = 18
text = "CONSOLE OUTPUT"
horizontal_alignment = 1

[node name="ConsoleText" type="RichTextLabel" parent="MainContainer/RightPanel/ConsolePanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/normal_font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_uxlav")
text = "[11:42:35] Welcome to the chemistry lab. Select a synthesis method and add chemicals.
"
scroll_following = true

[node name="HSeparator3" type="HSeparator" parent="MainContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="QuitButton" type="Button" parent="MainContainer/RightPanel"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.992157, 0.470588, 0.470588, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_nvmyb")
text = "EXIT LAB"

[node name="NavigationButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -141.5
offset_top = -50.0
offset_right = 141.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30
alignment = 1

[node name="LeftViewButton" type="Button" parent="NavigationButtons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_qsduc")
text = "◀ CHEMICALS"

[node name="RightViewButton" type="Button" parent="NavigationButtons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_qsduc")
text = "SYNTHESIS ▶"
